--- a/indexmain1.html
+++ b/indexmain1.html
@@ -299,19 +299,19 @@ nav .content .links{
       <div class="content">
       <div class="logo"><a href="#"><b>CRYPTO DROP<b> </a></div>
         <ul class="links">
-          <li><a href="INDEXMAIN1.html">HOME</a></li>
-          <li><a href="INDEXMAIN2.html">NEWS</a></li>
+          <li><a href="indexmain1.html">HOME</a></li>
+          <li><a href="INDEXMAIN2.HTML">NEWS</a></li>
           <li>
-            <a href="INDEXMAIN3.HTML" class="desktop-link">REWARDS & CONTRACT</a>
+            <a href="INDEXMAIN3.HTML" class="desktop-link">REWARDS & CONTRACT
             <input type="checkbox" id="show-features">
-            <label for="show-features">REWARDS & CONTRACT</label>
+            <label for="show-features">REWARDS & CONTRACT</label></a>
 
 
           </li>
           <li>
-            <a href="INDEXMAIN4.HTML" class="desktop-link">SUPPORT</a>
+            <a href="INDEXMAIN4.HTML" class="desktop-link">SUPPORT
             <input type="checkbox" id="show-services">
-            <label for="show-services">SUPPORT</label>
+		    <label for="show-services">SUPPORT</label></a>
 
               </li>
             </ul>
@@ -395,7 +395,7 @@ nav .content .links{
 	<hr>
 	<BR>
 	<BR>
-<a href="indexmain3.HTML"><BUTTON class="btn"><font color="ffffff">GET STARTED</font></BUTTON>
+<BUTTON class="btn"><font color="ffffff"><a href="INDEXMAIN3.HTML">GET STARTED </a></font></BUTTON>
 <br>
 <br>
 <br>
@@ -454,7 +454,7 @@ nav .content .links{
 <br>
 
 <br>
-<a href="indexMAIN9.html"><img src="usdt.jpg" width="100" height="150" border="5"></a> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <A HREF="INDEXMAIN9.HTML"><img src="tether.jpg"></A>&nbsp &nbsp &nbsp &nbsp &nbsp  &nbsp<A HREF="INDEXMAIN8.HTML"><img src="bnb.jpeg" width="100" height="150"></A> &nbsp &nbsp &nbsp &nbsp  &nbsp&nbsp<A HREF="INDEXMAIN6.HTML"><img src="cashapp.jpg" width="100" height="150"></A>
+<a href="indexMAIN9.html"><img src="usdt.jpg" width="100" height="150" border="5"></a> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <A HREF="INDEXMAIN9.HTML"><img src="tether.jpg"></A>&nbsp &nbsp &nbsp &nbsp &nbsp  &nbsp<A HREF="INDEXMAIN8.HTML"><img src="bnb.jpeg" width="100" height="150"></A> &nbsp &nbsp &nbsp &nbsp  &nbsp&nbsp<A HREF="INDEXMAIN6.HTML"><img src="cashh.jpg" width="100" height="150"></A>
 <h1><font color="fffffff">we accept different means of payment</h1>
 
 </body>
