--- a/indexmain1.html
+++ b/indexmain1.html
@@ -302,16 +302,16 @@ nav .content .links{
           <li><a href="indexmain1.html">HOME</a></li>
           <li><a href="INDEXMAIN2.HTML">NEWS</a></li>
           <li>
-            <a href="INDEXMAIN3.HTML" class="desktop-link">REWARDS & CONTRACT
+            <a href="INDEXMAIN3.HTML" class="desktop-link">REWARDS & CONTRACT</a>
             <input type="checkbox" id="show-features">
-            <label for="show-features">REWARDS & CONTRACT</label></a>
+            <label for="show-features">REWARDS & CONTRACT</label>
 
 
           </li>
           <li>
-            <a href="INDEXMAIN4.HTML" class="desktop-link">SUPPORT
+            <a href="INDEXMAIN4.HTML" class="desktop-link">SUPPORT</a>
             <input type="checkbox" id="show-services">
-		    <label for="show-services">SUPPORT</label></a>
+		    <label for="show-services">SUPPORT</label>
 
               </li>
             </ul>
@@ -395,7 +395,7 @@ nav .content .links{
 	<hr>
 	<BR>
 	<BR>
-<BUTTON class="btn"><font color="ffffff"><a href="INDEXMAIN3.HTML">GET STARTED </a></font></BUTTON>
+<BUTTON class="btn"><a href="INDEXMAIN3.HTML">GET STARTED </a></BUTTON>
 <br>
 <br>
 <br>
